force-app/main/default/objects/Opportunity_Approval__c/Opportunity_Approval__c.object-meta.xml
<CustomObject>
    <description>These records are related to Opportunities and are required for submission before attaining committee approval and engagement.</description>
    <label>Opportunity Review</label>
    <nameField>
        <displayFormat>OR-{00000}</displayFormat>
        <label>Opportunity Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>