force-app/main/default/objects/Opportunity_Approval__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <description>Used for NBC form to answer Fairness checklist questions</description>
    <label>A</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>