force-app/main/default/objects/Opportunity_Approval__c/fields/Additional_Sectors_Covered__c.field-meta.xml
<CustomField>
    <fullName>Additional_Sectors_Covered__c</fullName>
    <label>Additional Sectors Covered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADG</fullName>
            </value>
            <value>
                <fullName>BUS</fullName>
            </value>
            <value>
                <fullName>FIG</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>HC</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
            <value>
                <fullName>M&amp;T</fullName>
            </value>
            <value>
                <fullName>NRG</fullName>
            </value>
            <value>
                <fullName>POW</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>TECH</fullName>
            </value>
            <value>
                <fullName>TRANS</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>