force-app/main/default/objects/Opportunity_Approval__c/fields/Alternative_Fee_struct__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Fee_struct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative fee structure</label>
    <type>Checkbox</type>
</CustomField>