force-app/main/default/objects/Opportunity_Approval__c/fields/Amount_Paid_Upon_Delivery2__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Upon_Delivery2__c</fullName>
    <label>Amount Paid Upon Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>