force-app/main/default/objects/Opportunity_Approval__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requeste_To_Group_Head</fullName>
                <label>Requested To Group Head</label>
            </value>
            <value>
                <fullName>Submit_To_Committee</fullName>
                <label>Submit To Committee</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>