force-app/main/default/objects/Opportunity_Approval__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <description>Indicate if the NBC has been approved; it&apos;s been graded with A+, A, A-, B+, B, B-, C+, C, C-</description>
    <formula>IF(AND(NOT(ISBLANK(Date_Graded__c)), OR(LEFT(TEXT(Grade__c), 1) = &quot;A&quot;, LEFT(TEXT(Grade__c), 1) = &quot;B&quot;, LEFT(TEXT(Grade__c), 1) = &quot;C&quot;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicate if the NBC has been approved; it&apos;s been graded with A+, A, A-, B+, B, B-, C+, C, C-</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>