force-app/main/default/objects/Opportunity_Approval__c/fields/Asia_Angle__c.field-meta.xml
<CustomField>
    <fullName>Asia_Angle__c</fullName>
    <inlineHelpText>Does the company have material operations, sales or key suppliers in Asia or does it have plans for growth in Asia? (Outsourced or contract manufacturing is generally not considered to be Asia Angle</inlineHelpText>
    <label>Asia Angle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>