force-app/main/default/objects/Opportunity_Approval__c/fields/Asia_Angle_Notes__c.field-meta.xml
<CustomField>
    <fullName>Asia_Angle_Notes__c</fullName>
    <label>Asia Angle Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>