force-app/main/default/objects/Opportunity_Approval__c/fields/Background_On_Additional_Companies__c.field-meta.xml
<CustomField>
    <fullName>Background_On_Additional_Companies__c</fullName>
    <description>Background on Counterparties and Additional Client/Subjects</description>
    <label>Background On Additional Companies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>