force-app/main/default/objects/Opportunity_Approval__c/fields/Base_Fee__c.field-meta.xml
<CustomField>
    <fullName>Base_Fee__c</fullName>
    <inlineHelpText>A flat fee independent of ratchets</inlineHelpText>
    <label>Base Fee (MM)</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>