force-app/main/default/objects/Opportunity_Approval__c/fields/Cancel_For_Review__c.field-meta.xml
<CustomField>
    <fullName>Cancel_For_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel For Review</label>
    <type>Checkbox</type>
</CustomField>