force-app/main/default/objects/Opportunity_Approval__c/fields/Capital_Markets_Consulted__c.field-meta.xml
<CustomField>
    <fullName>Capital_Markets_Consulted__c</fullName>
    <inlineHelpText>Has the Capital Markets Group been consulted regarding financing or capital structure?</inlineHelpText>
    <label>Capital Markets Consulted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>