force-app/main/default/objects/Opportunity_Approval__c/fields/Capital_Raise__c.field-meta.xml
<CustomField>
    <fullName>Capital_Raise__c</fullName>
    <label>Capital Raise (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>