force-app/main/default/objects/Opportunity_Approval__c/fields/Classic_URL__c.field-meta.xml
<CustomField>
    <fullName>Classic_URL__c</fullName>
    <label>Classic URL</label>
    <length>225</length>
    <type>Text</type>
</CustomField>