force-app/main/default/objects/Opportunity_Approval__c/fields/Client_Company__c.field-meta.xml
<CustomField>
    <fullName>Client_Company__c</fullName>
    <formula>Related_Opportunity__r.Client__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Company</label>
    <type>Text</type>
</CustomField>