force-app/main/default/objects/Opportunity_Approval__c/fields/Client_Country__c.field-meta.xml
<CustomField>
    <fullName>Client_Country__c</fullName>
    <formula>Related_Opportunity__r.Client__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Country</label>
    <type>Text</type>
</CustomField>