force-app/main/default/objects/Opportunity_Approval__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <formula>Related_Opportunity__r.Client__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client ID</label>
    <type>Text</type>
</CustomField>