force-app/main/default/objects/Opportunity_Approval__c/fields/Client_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Client_Ownership__c</fullName>
    <formula>TEXT(Related_Opportunity__r.Client_Ownership__c)</formula>
    <label>Client Ownership</label>
    <type>Text</type>
</CustomField>