force-app/main/default/objects/Opportunity_Approval__c/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <inlineHelpText>Include Location &amp; Industry Classification</inlineHelpText>
    <label>Company Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>