force-app/main/default/objects/Opportunity_Approval__c/fields/Company_Geographic_Domicile__c.field-meta.xml
<CustomField>
    <fullName>Company_Geographic_Domicile__c</fullName>
    <label>Company Geographic Domicile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>