force-app/main/default/objects/Opportunity_Approval__c/fields/Company_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Ownership_Type__c</fullName>
    <formula>TEXT(Related_Opportunity__r.Subject_Company_Ownership__c)</formula>
    <label>Subject Ownership</label>
    <type>Text</type>
</CustomField>