force-app/main/default/objects/Opportunity_Approval__c/fields/Conflict_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Check_Date__c</fullName>
    <description>looks at request date from opp</description>
    <formula>Related_Opportunity__r.Conflicts_Check_Request_Date__c</formula>
    <label>Conflict Check Date</label>
    <type>Date</type>
</CustomField>