force-app/main/default/objects/Opportunity_Approval__c/fields/Conflicts_2a_Not_Listed__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_2a_Not_Listed__c</fullName>
    <description>Are there any pitches to, or engagements by, the potential client and, if known, the likely counterparty(ies), that are not listed in the completed conflicts check report?</description>
    <label>Yes/No</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>