force-app/main/default/objects/Opportunity_Approval__c/fields/Conflicts_2b_Not_Listed_TXT__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_2b_Not_Listed_TXT__c</fullName>
    <description>If yes, please list these pitches and/or engagements and their respective deal teams:</description>
    <label>If Yes, please explain</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>