force-app/main/default/objects/Opportunity_Approval__c/fields/Conflicts_35a_Related_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_35a_Related_to_Client__c</fullName>
    <description>Have any of the deal team members had, or do any of them currently have, any business, employment, family or other similar relationships with the potential client or, if known, the likely counterparty(ies) (or any of their respective affiliates or management teams)?</description>
    <label>Yes/No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>