force-app/main/default/objects/Opportunity_Approval__c/fields/Conflicts_35a_Related_to_Client_TXT__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_35a_Related_to_Client_TXT__c</fullName>
    <label>If Yes, please explain</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>