force-app/main/default/objects/Opportunity_Approval__c/fields/Conflicts_3a_Related_to_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_3a_Related_to_Transaction__c</fullName>
    <description>Do any of the deal team members or, to the extent any of the deal team members are aware, does Houlihan Lokey or any other employee of Houlihan Lokey, have any business, employment, family or other relationships with or any direct or indirect financial interests in or exposures to the contemplated transaction, any related transactions, the potential client or, if known, the likely counterparty(ies), or their respective affiliates or management teams?</description>
    <label>Yes/No</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>