force-app/main/default/objects/Opportunity_Approval__c/fields/Conflicts_3b_Related_to_Transaction_TXT__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_3b_Related_to_Transaction_TXT__c</fullName>
    <description>description for 3a</description>
    <label>If Yes, please explain</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>