force-app/main/default/objects/Opportunity_Approval__c/fields/Conflicts_4a_Conflict_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_4a_Conflict_of_Interest__c</fullName>
    <description>Have any of the deal team members or, to the extent any of the deal team members are aware, has Houlhan Lokey or any other employee of Houlihan Lokey, had any discussions with any likely counterparty(ies) with respect to a potential transaction with the potential client, or had any other discussions with such counterparty(ies) that might create the perception of a conflict of interest?</description>
    <label>Yes/No</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>