force-app/main/default/objects/Opportunity_Approval__c/fields/Conflicts_4b_Conflict_of_Interest_TXT__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_4b_Conflict_of_Interest_TXT__c</fullName>
    <description>description for 4a</description>
    <label>If Yes, please explain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>