force-app/main/default/objects/Opportunity_Approval__c/fields/Conflicts_5a_Other_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_5a_Other_Conflicts__c</fullName>
    <description>Are any members of the deal team aware of any relationships or discussions not specified above that might create the perception of a conflict of interest?</description>
    <label>Yes/No</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>