force-app/main/default/objects/Opportunity_Approval__c/fields/Conflicts_5b_Other_Conflicts_TXT__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_5b_Other_Conflicts_TXT__c</fullName>
    <description>description for 5a</description>
    <label>If Yes, please explain</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>