force-app/main/default/objects/Opportunity_Approval__c/fields/Conflicts_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Outcome__c</fullName>
    <formula>TEXT(Related_Opportunity__r.Conflicts_Check_Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conflicts Outcome</label>
    <type>Text</type>
</CustomField>