force-app/main/default/objects/Opportunity_Approval__c/fields/Cover_Related_Financial_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Cover_Related_Financial_Sponsors__c</fullName>
    <label>Cover Related Financial Sponsors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>