force-app/main/default/objects/Opportunity_Approval__c/fields/Cover_Related_Financial_Sponsors_Team__c.field-meta.xml
<CustomField>
    <fullName>Cover_Related_Financial_Sponsors_Team__c</fullName>
    <label>Cover Related Financial Sponsors_Team</label>
    <type>TextArea</type>
</CustomField>