force-app/main/default/objects/Opportunity_Approval__c/fields/Coverage_Officer_Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Officer_Follow_Up_Notes__c</fullName>
    <label>Coverage Officer Follow-Up Notes</label>
    <type>TextArea</type>
</CustomField>