force-app/main/default/objects/Opportunity_Approval__c/fields/Coverage_Officer_s__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Officer_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coverage Officer(s)</label>
    <type>Checkbox</type>
</CustomField>