force-app/main/default/objects/Opportunity_Approval__c/fields/Coverage_Officer_Team__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Officer_Team__c</fullName>
    <label>Coverage Officer Team</label>
    <type>TextArea</type>
</CustomField>