force-app/main/default/objects/Opportunity_Approval__c/fields/Coverage_Officers_Form__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Officers_Form__c</fullName>
    <formula>IF( Coverage_Officer_s__c,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Officers Form</label>
    <type>Text</type>
</CustomField>