force-app/main/default/objects/Opportunity_Approval__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <type>TextArea</type>
</CustomField>