force-app/main/default/objects/Opportunity_Approval__c/fields/Date_Graded__c.field-meta.xml
<CustomField>
    <fullName>Date_Graded__c</fullName>
    <description>initial Grade assignment date</description>
    <label>Date Graded</label>
    <type>Date</type>
</CustomField>