force-app/main/default/objects/Opportunity_Approval__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>date of initial form submission</description>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>