force-app/main/default/objects/Opportunity_Approval__c/fields/Direct_Link__c.field-meta.xml
<CustomField>
    <fullName>Direct_Link__c</fullName>
    <formula>IF(ISPICKVAL(Form_Type__c,&apos;FEIS&apos;), HYPERLINK(&apos;/apex/HL_FEIS?id=&apos;+Id+&apos;&amp;sfdc.override=1&apos;, &apos;FEIS&apos;,&apos;_blank&apos;),
IF(ISPICKVAL(Form_Type__c,&apos;CNBC&apos;), HYPERLINK(&apos;/apex/HL_CNBC?id=&apos;+Id+&apos;&amp;sfdc.override=1&apos;, &apos;CNBC&apos;,&apos;_blank&apos;),
HYPERLINK(&apos;/apex/HL_NBC?id=&apos;+Id+&apos;&amp;sfdc.override=1&apos;, &apos;NBC&apos;,&apos;_blank&apos;)
))</formula>
    <label>Direct Link</label>
    <type>Text</type>
</CustomField>