force-app/main/default/objects/Opportunity_Approval__c/fields/Discretionary_Fee__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Fee__c</fullName>
    <label>Discretionary Fee (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>