force-app/main/default/objects/Opportunity_Approval__c/fields/Est_Transaction_Size_Market_Cap_MM__c.field-meta.xml
<CustomField>
    <fullName>Est_Transaction_Size_Market_Cap_MM__c</fullName>
    <description>USED ON CF NBC FORM TO PULL FROM OPPORTUNITY FIELD OF THE SAME NAME. NOT USED ON THE FEIS FORM.</description>
    <formula>Related_Opportunity__r.Estimated_Transaction_Size_MM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Transaction Size / Market Cap (MM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>