force-app/main/default/objects/Opportunity_Approval__c/fields/Estimated_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Fee__c</fullName>
    <description>Legacy field, used before migration to Lightning</description>
    <formula>(Related_Opportunity__r.Total_Estimated_Fee__c)/1000000</formula>
    <label>Estimated Fee (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>