force-app/main/default/objects/Opportunity_Approval__c/fields/Estimated_High_End_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_High_End_Fee__c</fullName>
    <label>Estimated High-End Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>