force-app/main/default/objects/Opportunity_Approval__c/fields/Estimated_Minimum_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Minimum_Fee__c</fullName>
    <inlineHelpText>If no minimum in the EL, enter estimated minimum fee</inlineHelpText>
    <label>Minimum Fee (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>