force-app/main/default/objects/Opportunity_Approval__c/fields/Estimated_Transaction_Size_Equity_MM__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Transaction_Size_Equity_MM__c</fullName>
    <description>USED ON FEIS FORM, INPUT CURRENCY FIELD. DO NOT USE ON NBC FORM.</description>
    <label>Estimated Transaction Size Equity (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>