force-app/main/default/objects/Opportunity_Approval__c/fields/Estimated_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Valuation__c</fullName>
    <inlineHelpText>Best estimate for preliminary valuation expressed as a currency value in millions</inlineHelpText>
    <label>Estimated Valuation (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>