force-app/main/default/objects/Opportunity_Approval__c/fields/EU_Override__c.field-meta.xml
<CustomField>
    <fullName>EU_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EU Override</label>
    <type>Checkbox</type>
</CustomField>