force-app/main/default/objects/Opportunity_Approval__c/fields/Existing_Financial_Arrangement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Existing_Financial_Arrangement_Notes__c</fullName>
    <inlineHelpText>(summary should include general terms, incumbent lender(s), lending relationships that may impact pitch, staple dynamic, history of covenant violations, prior bankruptcy etc.)</inlineHelpText>
    <label>Existing Financial Arrangement Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>