force-app/main/default/objects/Opportunity_Approval__c/fields/Existing_or_Repeat_Client__c.field-meta.xml
<CustomField>
    <fullName>Existing_or_Repeat_Client__c</fullName>
    <label>Existing or Repeat Client?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>