force-app/main/default/objects/Opportunity_Approval__c/fields/Existing_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Existing_Relationships__c</fullName>
    <label>Existing Relationships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>