force-app/main/default/objects/Opportunity_Approval__c/fields/Fairness_Committee_or_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Committee_or_Trustee__c</fullName>
    <label>Fairness Committee or Trustee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>