force-app/main/default/objects/Opportunity_Approval__c/fields/Fairness_Disclose_Analyses__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Disclose_Analyses__c</fullName>
    <label>Fairness Disclose Analyses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>