force-app/main/default/objects/Opportunity_Approval__c/fields/Fairness_Disclosure_Document__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Disclosure_Document__c</fullName>
    <label>Fairness Disclosure Document</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>14A/14C</fullName>
            </value>
            <value>
                <fullName>S-4/F-4</fullName>
            </value>
            <value>
                <fullName>13E-3</fullName>
            </value>
            <value>
                <fullName>14D-9</fullName>
            </value>
            <value>
                <fullName>State Proxy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>