force-app/main/default/objects/Opportunity_Approval__c/fields/Fairness_Disclosure_Document_Other__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Disclosure_Document_Other__c</fullName>
    <label>Fairness Disclosure Document Other</label>
    <type>TextArea</type>
</CustomField>