force-app/main/default/objects/Opportunity_Approval__c/fields/Fairness_Fee_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Fee_Inclusion__c</fullName>
    <label>Fairness Fee Inclusion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In M&amp;A Fee</fullName>
            </value>
            <value>
                <fullName>Priced Additionally</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>