force-app/main/default/objects/Opportunity_Approval__c/fields/Fairness_Multiple_Conclusions__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Multiple_Conclusions__c</fullName>
    <label>Fairness Multiple Conclusions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>