force-app/main/default/objects/Opportunity_Approval__c/fields/Fairness_Opinion_Provided__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Opinion_Provided__c</fullName>
    <inlineHelpText>Is there a potential Fairness Opinion component to this assignment?</inlineHelpText>
    <label>Fairness Opinion Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>